feat(infra): implement environment variable injection for CORS and API routing
TASK-1: Fix CORS Configuration
- Make CORS allowed origins configurable via ALLOWED_ORIGINS env var
- Update CorsConfig.java to inject allowed origins from Spring property
- Add app.cors.allowed-origins to application.yml (prod: from env var)
- Add app.cors.allowed-origins to application-dev.yml (dev: defaults to http://localhost:5173)
- Dev unchanged: http://localhost:5173 is default
- Prod can be locked to https://yourshop.in via Render dashboard

TASK-2: Fix Frontend API Base URL
- Make API base URL configurable via VITE_API_URL env var
- Update frontend/src/api/client.ts to read VITE_API_URL from import.meta.env
- Use nullish coalescing (??) to fall back to empty string when undefined
- Create frontend/src/vite-env.d.ts for TypeScript definition of VITE_API_URL
- Dev workflow unchanged: empty VITE_API_URL → /api → Vite proxy → http://localhost:8080
- Prod workflow: VITE_API_URL=https://api.yourshop.in → direct API calls

Environment Variables Documentation
- Add backend/.env.production.example documenting all required backend env vars
  (DATABASE_URL, DATABASE_USERNAME, DATABASE_PASSWORD, JWT_SECRET, APP_USERNAME,
   APP_PASSWORD, ALLOWED_ORIGINS, R2_*, SENTRY_DSN)
- Add frontend/.env.production.example documenting VITE_API_URL for prod
- Add frontend/.env.local.example explaining optional dev override
- Update .gitignore to explicitly exclude .env.production and .env.production.local
  (prevents accidental secret commits)

Security & Configuration
✅ No secrets committed — all .example files are templates only
✅ .gitignore already protects *.env files
✅ Actual env vars set via Render dashboard (backend) and GitHub (frontend)
✅ Local dev workflow unchanged — backward compatible
✅ Prod workflow ready for Render deployment

Backwards Compatibility
- Dev users can continue working without .env files (still uses Vite proxy)
- Optional .env.local files for explicit configuration
- Spring Bo